--- a/spireplayer-unity-good.Editor.csproj
+++ b/spireplayer-unity-good.Editor.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Assets\Editor\Test\Scripting\Vector3Js_Tests.cs" />
     <Compile Include="Assets\Editor\Test\UI\ElementFactory_Tests.cs" />
     <Compile Include="Assets\Editor\Test\UI\ElementSchema_Tests.cs" />
+    <Compile Include="Assets\Editor\Test\UI\Element_IntegrationTests.cs" />
     <Compile Include="Assets\Editor\Test\UI\Element_Tests.cs" />
     <Compile Include="Assets\Editor\Test\Util\StandardQueryResolver_Tests.cs" />
     <Compile Include="Assets\Editor\Tools\ContextMenuHooks.cs" />
