--- a/spireplayer-unity-good.csproj
+++ b/spireplayer-unity-good.csproj
@@ -243,6 +243,7 @@
     <Compile Include="Assets\Source\Spire\IUX\Element\ElementData.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Element\ElementDescription.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Element\ElementFactory.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Element\ElementQuery.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Element\ElementRef.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Element\ElementSchema.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Element\ElementSchemaData.cs" />
