--- a/spireplayer-unity-good.csproj
+++ b/spireplayer-unity-good.csproj
@@ -207,6 +207,8 @@
     <Compile Include="Assets\Source\Spire\Asset\EditorAssetLoader.cs" />
     <Compile Include="Assets\Source\Spire\Asset\IAssetLoader.cs" />
     <Compile Include="Assets\Source\Spire\Asset\IAssetManager.cs" />
+    <Compile Include="Assets\Source\Spire\Asset\Render\MaterialData.cs" />
+    <Compile Include="Assets\Source\Spire\Asset\Render\ShaderData.cs" />
     <Compile Include="Assets\Source\Spire\Asset\StandardAssetLoader.cs" />
     <Compile Include="Assets\Source\Spire\Audio\MusicManager.cs" />
     <Compile Include="Assets\Source\Spire\Data\AnchorData.cs" />
