--- a/spireplayer-unity.csproj
+++ b/spireplayer-unity.csproj
@@ -368,6 +368,8 @@
     <Compile Include="Assets\Source\Spire\Data\StaticData.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Element\IElementManager.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Layer\ILayerManager.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Primitive\IReticlePrimitive.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Primitive\ReticlePrimitive.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Widget\ColorConfig.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Content\Anchor.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Content\AnchorReferenceFrameFactory.cs" />
@@ -421,17 +423,19 @@
     <Compile Include="Assets\Source\Spire\IUX\Widget\ButtonReadyState.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Widget\ButtonSchema.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Widget\IColorConfig.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Widget\IHighlightManager.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Widget\InteractableSchema.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Widget\InteractableWidget.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Widget\ITweenConfig.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Widget\IUXTest.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Widget\Caption.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Widget\IWidget.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Widget\IWidgetConfig.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Widget\TweenConfig.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Widget\Widget.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Widget\WidgetAnchors.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Widget\WidgetConfig.cs" />
-    <Compile Include="Assets\Source\Spire\IUX\Widget\WidgetRenderer.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Primitive\PrimitiveRenderer.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Widget\WidgetSchema.cs" />
     <Compile Include="Assets\Source\Spire\Scripting\DefaultScriptParser.cs" />
     <Compile Include="Assets\Source\Spire\Scripting\Interop\AppDataScriptingInterface.cs" />
