Mostly breaking stuff again.
But I promise, it's worth the wait.

--- a/spireplayer-unity.csproj
+++ b/spireplayer-unity.csproj
@@ -367,6 +367,7 @@
     <Compile Include="Assets\Source\Spire\Data\ScriptData.cs" />
     <Compile Include="Assets\Source\Spire\Data\ScriptReference.cs" />
     <Compile Include="Assets\Source\Spire\Data\StaticData.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Activator\Activator.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Content\Anchor.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Content\AnchorReferenceFrameFactory.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Content\Content.cs" />
@@ -393,6 +394,7 @@
     <Compile Include="Assets\Source\Spire\IUX\Element\ElementSchemaData.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Element\ElementSchemaProp.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Element\ElementTypes.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Element\IElement.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Element\IElementFactory.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Element\IElementManager.cs" />
     <Compile Include="Assets\Source\Spire\IUX\HsbColor.cs" />
@@ -402,31 +404,26 @@
     <Compile Include="Assets\Source\Spire\IUX\Interaction\IInteractive.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Interaction\IntentionManager.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Interaction\InteractionManager.cs" />
-    <Compile Include="Assets\Source\Spire\IUX\Interaction\InteractiveWidget.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Layer\ILayerable.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Layer\ILayerManager.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Layer\Layer.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Layer\LayerManager.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Layer\LayerMaskNames.cs" />
-    <Compile Include="Assets\Source\Spire\IUX\Primitive\ActivatorPrimitive.cs" />
-    <Compile Include="Assets\Source\Spire\IUX\Primitive\IActivatorPrimitive.cs" />
-    <Compile Include="Assets\Source\Spire\IUX\Primitive\IInteractivePrimitive.cs" />
-    <Compile Include="Assets\Source\Spire\IUX\Primitive\InteractivePrimitive.cs" />
-    <Compile Include="Assets\Source\Spire\IUX\Primitive\IPrimitive.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Activator\ActivatorMonoBehaviour.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Activator\IActivator.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Primitive\IPrimitiveFactory.cs" />
-    <Compile Include="Assets\Source\Spire\IUX\Primitive\IReticlePrimitive.cs" />
-    <Compile Include="Assets\Source\Spire\IUX\Primitive\ITextPrimitive.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Primitive\IReticle.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Primitive\IText.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Primitive\PrimitiveFactory.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Primitive\PrimitiveRenderer.cs" />
-    <Compile Include="Assets\Source\Spire\IUX\Primitive\ReticlePrimitive.cs" />
-    <Compile Include="Assets\Source\Spire\IUX\Primitive\TextPrimitive.cs" />
-    <Compile Include="Assets\Source\Spire\IUX\Primitive\WidgetPrimitive.cs" />
-    <Compile Include="Assets\Source\Spire\IUX\Widget\AimableWidget.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Primitive\ReticleMonoBehaviour.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Primitive\TextMonoBehaviour.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Primitive\WidgetMonoBehaviour.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Widget\Button.cs" />
-    <Compile Include="Assets\Source\Spire\IUX\Widget\ButtonActivatedState.cs" />
-    <Compile Include="Assets\Source\Spire\IUX\Widget\ButtonActivatingState.cs" />
-    <Compile Include="Assets\Source\Spire\IUX\Widget\ButtonReadyState.cs" />
-    <Compile Include="Assets\Source\Spire\IUX\Widget\ButtonState.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Activator\ActivatorActivatedState.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Activator\ActivatorActivatingState.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Activator\ActivatorReadyState.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Activator\ActivatorState.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Widget\Caption.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Widget\ColorConfig.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Widget\IColorConfig.cs" />
